--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,183 +1,258 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Login n Registration</title>
+    <title>Login & Registration</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <style>
+        .login-container {
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
 
+        .login-logo {
+            position: relative;
+            margin-left: -41.5%;
+        }
+
+        .login-logo img {
+            position: absolute;
+            width: 20%;
+            margin-top: 19%;
+            background: #282726;
+            border-radius: 4.5rem;
+            padding: 5%;
+        }
+
+        .login-form-1 {
+            padding: 9%;
+            background: #ecf2f0dd;
+            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+        }
+
+        .login-form-1 h3 {
+            text-align: center;
+            margin-bottom: 12%;
+            color: #fff;
+        }
+
+        .login-form-2 {
+            padding: 9%;
+            background: #d5e7f8a9;
+            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+        }
+
+        .login-form-2 h3 {
+            text-align: center;
+            margin-bottom: 12%;
+            color: #fff;
+        }
+
+        .btnSubmit {
+            font-weight: 600;
+            width: 50%;
+            color: #282726;
+            background-color: #fff;
+            border: none;
+            border-radius: 1.5rem;
+            padding: 2%;
+        }
+    </style>
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style.css">
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
 </head>
 
 <body>
+
     <header>
+        <h1 class="display-4 text-center">Login & Registration</h1>
         <!-- place navbar here -->
     </header>
     <main>
+        <div class="container login-container">
+            <div class="row">
+                <div class="col-md-6 login-form-1">
+                    <!-- registration -->
+                    <div class="registration">
+                        <div class="container border border-3 border-success">
+                            <!-- FLASH -->
+                            <h4 class="display-4 text-success">Resgister
+                            </h4>
+                            {% with messages =
+                            get_flashed_messages(category_filter=['top']) %}
+                            {% if messages %} {% for message in messages %}
 
+                            <div class="alert alert-danger" role="alert">
+                                {{message}}
+                            </div>
 
-        <div class="registration">
-            {% with messages = get_flashed_messages(category_filter=['top']) %}
-            {% if messages %}
-            {% for message in messages %}
+                            {% endfor %} {% endif %} {% endwith %} {% with
+                            messages =
+                            get_flashed_messages(category_filter=['success'])
+                            %} {% if messages %} {% for message in messages
+                            %}
 
-            <div class="alert alert-danger" role="alert">
-                {{message}}
-            </div>
+                            <div class="alert alert-success" role="alert">
+                                {{message}}
+                            </div>
 
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-            {% with messages = get_flashed_messages(category_filter=['success']) %}
-            {% if messages %}
-            {% for message in messages %}
+                            {% endfor %} {% endif %} {% endwith %}
 
-            <div class="alert alert-success" role="alert">
-                {{message}}
-            </div>
+                            <!-- FLASH END -->
 
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
+                            <form action="/register_validate" method="post">
+                                <!-- flash -->
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">
+                                        First Name {% with
+                                        messages =
+                                        get_flashed_messages(category_filter=['frname'])
+                                        %} {% if messages %} {%
+                                        for message in messages
+                                        %}
 
-            <section class="vh-100 gradient-custom">
-                <div class="container py-5 h-100">
-                    <div class="row justify-content-center align-items-center h-100">
-                        <div class="col-12 col-lg-9 col-xl-7">
-                            <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
-                                <div class="card-body p-4 p-md-5">
-                                    <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Registration Form</h3>
-                                    <form action="/register_validate" method="post">
-
-                                        <div class="row">
-                                            <div class="col-md-6 mb-4">
-
-                                                <div class="form-outline">
-                                                    <input type="text" id="firstName" class="form-control form-control-lg" />
-                                                    <label class="form-label" for="firstName">First Name</label>
-                                                </div>
-
-                                            </div>
-                                            <div class="col-md-6 mb-4">
-
-                                                <div class="form-outline">
-                                                    <input type="text" id="lastName" class="form-control form-control-lg" />
-                                                    <label class="form-label" for="lastName">Last Name</label>
-                                                </div>
-
-                                            </div>
+                                        <div class="alert alert-warning" role="alert">
+                                            {{message}}
                                         </div>
 
-                                        <div class="row">
-                                            <div class="col-md-6 mb-4 d-flex align-items-center">
-
-                                                <div class="form-group">
-                                                    <label for="exampleFormControlInput1">Email address</label>
-                                                    {% with messages = get_flashed_messages(category_filter=['email'])
-                                                    %}
-                                                    {% if messages %}
-                                                    {% for message in messages %}
-
-                                                    <div class="alert alert-warning" role="alert">
-                                                        {{message}}
-                                                    </div>
-
-                                                    {% endfor %}
-                                                    {% endif %}
-                                                    {% endwith %}
-
-                                                    <input type="text" class="form-control" id="exampleFormControlInput1"
-                                                        placeholder="Email" name="email">
-                                                </div>
-                                            </div>
-
-
-                                            <div class="row">
-                                                <div class="col-md-6 mb-4 pb-2">
-
-                                                    <div class="form-group">
-                                                        <label for="exampleFormControlInput1">Password</label>
-                                                        {% with messages =
-                                                        get_flashed_messages(category_filter=['password']) %}
-                                                        {% if messages %}
-                                                        {% for message in messages %}
-
-                                                        <div class="alert alert-warning" role="alert">
-                                                            {{message}}
-                                                        </div>
-
-                                                        {% endfor %}
-                                                        {% endif %}
-                                                        {% endwith %}
-                                                        <input type="password" class="form-control"
-                                                            id="exampleFormControlInput1" placeholder="Password"
-                                                            name="password">
-                                                    </div>
-
-                                                </div>
-                                                <div class="col-md-6 mb-4 pb-2">
-
-                                                    <div class="form-group">
-                                                        <label for="exampleFormControlInput1">Confirm Password</label>
-                                                        <input type="password" class="form-control"
-                                                            id="exampleFormControlInput1" placeholder="Confirm Password"
-                                                            name="confirm_password">
-                                                    </div>
-                                                    <br>
-                                                    <button class="btn btn-outline-primary" type="submit"
-                                                        value="submit">Register</button>
-
-                                    </form>
-
-
+                                        {% endfor %} {% endif %}
+                                        {% endwith %}
+                                    </label>
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="First Name" name="first_name" />
                                 </div>
 
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Last
+                                        Name</label>
+                                    {% with messages =
+                                    get_flashed_messages(category_filter=['last_name'])
+                                    %} {% if messages %} {% for
+                                    message in messages %}
+
+                                    <div class="alert alert-warning" role="alert">
+                                        {{message}}
+                                    </div>
+
+                                    {% endfor %} {% endif %} {%
+                                    endwith %}
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Last Name" name="last_name" />
+                                </div>
+                                <!-- FLASH -->
+
+                                <!-- email start -->
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Email
+                                        address</label>
+                                    {% with messages =
+                                    get_flashed_messages(category_filter=['email'])
+                                    %} {% if messages %} {% for
+                                    message in messages %}
+
+                                    <div class="alert alert-warning" role="alert">
+                                        {{message}}
+                                    </div>
+
+                                    {% endfor %} {% endif %} {%
+                                    endwith %}
+
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Email" name="email" />
+                                </div>
+                                <!-- email end -->
+
+                                <!-- password start -->
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Password</label>
+                                    {% with messages =
+                                    get_flashed_messages(category_filter=['password'])
+                                    %} {% if messages %} {% for
+                                    message in messages %}
+
+                                    <div class="alert alert-warning" role="alert">
+                                        {{message}}
+                                    </div>
+
+                                    {% endfor %} {% endif %} {%
+                                    endwith %}
+                                    <input type="password" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Password" name="password" />
+                                </div>
+                                <!-- password end -->
+
+                                <!-- confirm password -->
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Confirm
+                                        Password</label>
+                                    <input type="password" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Confirm Password" name="confirm_password" />
+                                </div>
+                                <button class="btn btn-outline-success mb-3" type="submit"
+                                    value="submit">Register</button>
+
+                                <!-- confirm password end -->
+                            </form>
+                        </div>
+                    </div>
+                    <!-- registration end -->
+                </div>
+                <!-- login  -->
+                <div class="col-md-6 login-form-2">
+
+                    <div class="login">
+                        <div class="container border border-3 border-primary">
+                            <h4 class="display-4 text-primary">Login</h4>
+                            {% with messages =
+                            get_flashed_messages(category_filter=['login_top'])
+                            %} {% if messages %} {% for message in messages
+                            %}
+
+                            <div class="alert alert-danger" role="alert">
+                                {{message}}
                             </div>
+
+                            {% endfor %} {% endif %} {% endwith %}
+                            <form action="/login_validate" method="post">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Email</label>
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Email" name="email" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Password</label>
+                                    <input type="password" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="password" name="password" />
+                                </div>
+                                <button class="btn-outline-primary p-1 mb-3" type="submit" value="submit">Login</button>
+                            </form>
                         </div>
                     </div>
                 </div>
-        </div>
-        </section>
+                <!-- login end -->
+            </div>
+            <!-- login  -->
 
-        </form>
-
-
-        </div>
-
-        </div>
 
 
     </main>
+
+
+
     <footer>
         <!-- place footer here -->
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-        </script>
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-        </script>
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
-
-
-
-
-
-{% extends 'base.html' %}
-
-
-{% block content %}
-
-{% endblock content %}
-
-
-{% block scripts %}
-{% endblock scripts %}
