--- a/templates/index.html
+++ b/templates/index.html
@@ -1,85 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <title>Login & Registration</title>
+    <title>Login & Reg</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <style>
-        .login-container {
-            margin-top: 5%;
-            margin-bottom: 5%;
-        }
 
-        .login-logo {
-            position: relative;
-            margin-left: -41.5%;
-        }
-
-        .login-logo img {
-            position: absolute;
-            width: 20%;
-            margin-top: 19%;
-            background: #282726;
-            border-radius: 4.5rem;
-            padding: 5%;
-        }
-
-        .login-form-1 {
-            padding: 9%;
-            background: #ecf2f0dd;
-            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-        }
-
-        .login-form-1 h3 {
-            text-align: center;
-            margin-bottom: 12%;
-            color: #fff;
-        }
-
-        .login-form-2 {
-            padding: 9%;
-            background: #d5e7f8a9;
-            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-        }
-
-        .login-form-2 h3 {
-            text-align: center;
-            margin-bottom: 12%;
-            color: #fff;
-        }
-
-        .btnSubmit {
-            font-weight: 600;
-            width: 50%;
-            color: #282726;
-            background-color: #fff;
-            border: none;
-            border-radius: 1.5rem;
-            padding: 2%;
-        }
-    </style>
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
-
     <header>
-        <h1 class="display-4 text-center">Login & Registration</h1>
+        <div class=" container-fluid my-2">
+
+            <h1 class="display-4 text-center"> Login & Registration </h1>
+        </div>
         <!-- place navbar here -->
     </header>
     <main>
-        <div class="container login-container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6 login-form-1">
                     <!-- registration -->
                     <div class="registration">
-                        <div class="container border border-3 border-success">
+                        <div class="container border border-3 border-success rounded-4 ">
                             <!-- FLASH -->
-                            <h4 class="display-4 text-success">Resgister
+                            <h4 class="display-4 text-success py-3 mx-2">Resgister
                             </h4>
                             {% with messages =
                             get_flashed_messages(category_filter=['top']) %}
@@ -103,7 +52,7 @@
 
                             <!-- FLASH END -->
 
-                            <form action="/register_validate" method="post">
+                            <form class="mx-2" action="/register_validate" method="post">
                                 <!-- flash -->
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">
@@ -114,7 +63,8 @@
                                         for message in messages
                                         %}
 
-                                        <div class="alert alert-warning" role="alert">
+                                        <div class="alert alert-dismissible alert-danger border border-3 border-danger rounded-4 bg-danger bg-opacity-75 text-center text-white"
+                                            role="alert">
                                             {{message}}
                                         </div>
 
@@ -133,9 +83,11 @@
                                     %} {% if messages %} {% for
                                     message in messages %}
 
-                                    <div class="alert alert-warning" role="alert">
+                                    <div class="alert alert-dismissible alert-danger border border-3 border-danger rounded-4 bg-danger bg-opacity-75 text-center text-white"
+                                        role="alert">
                                         {{message}}
                                     </div>
+
 
                                     {% endfor %} {% endif %} {%
                                     endwith %}
@@ -153,9 +105,11 @@
                                     %} {% if messages %} {% for
                                     message in messages %}
 
-                                    <div class="alert alert-warning" role="alert">
+                                    <div class="alert alert-dismissible alert-warning border border-3 border-warning rounded-4 bg-warning bg-opacity-50 text-center text-dark"
+                                        role="alert">
                                         {{message}}
                                     </div>
+
 
                                     {% endfor %} {% endif %} {%
                                     endwith %}
@@ -173,9 +127,11 @@
                                     %} {% if messages %} {% for
                                     message in messages %}
 
-                                    <div class="alert alert-warning" role="alert">
+                                    <div class="alert alert-dismissible alert-warning border border-3 border-warning rounded-4 bg-warning bg-opacity-50 text-center text-dark"
+                                        role="alert">
                                         {{message}}
                                     </div>
+
 
                                     {% endfor %} {% endif %} {%
                                     endwith %}
@@ -191,8 +147,9 @@
                                     <input type="password" class="form-control" id="exampleFormControlInput1"
                                         placeholder="Confirm Password" name="confirm_password" />
                                 </div>
-                                <button class="btn btn-outline-success mb-3" type="submit"
-                                    value="submit">Register</button>
+                                <button
+                                    class="btn btn-outline-success px-3 mt-5 position-relative translate-middle top-50 start-50"
+                                    type="submit" value="submit">Register</button>
 
                                 <!-- confirm password end -->
                             </form>
@@ -204,8 +161,8 @@
                 <div class="col-md-6 login-form-2">
 
                     <div class="login">
-                        <div class="container border border-3 border-primary">
-                            <h4 class="display-4 text-primary">Login</h4>
+                        <div class="container mt-5 border border-3 border-primary rounded-4 py-4">
+                            <h4 class="display-4 text-primary py-2 px-2">Login</h4>
                             {% with messages =
                             get_flashed_messages(category_filter=['login_top'])
                             %} {% if messages %} {% for message in messages
@@ -227,7 +184,9 @@
                                     <input type="password" class="form-control" id="exampleFormControlInput1"
                                         placeholder="password" name="password" />
                                 </div>
-                                <button class="btn-outline-primary p-1 mb-3" type="submit" value="submit">Login</button>
+                                <button
+                                    class="btn btn-outline-primary px-3 mt-5 position-relative translate-middle top-50 start-50"
+                                    type="submit" value="submit">Login</button>
                             </form>
                         </div>
                     </div>
@@ -240,19 +199,17 @@
 
     </main>
 
-
-
     <footer>
         <!-- place footer here -->
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+        </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
